Bug 244602 - Crash while redirect a mail
Summary: Crash while redirect a mail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 12:36 UTC by Ludwig Reiter
Modified: 2010-07-20 15:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-07-14 12:36:56 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: 4.4.4.e5.20100709.1148005-kk1.1149023 (enterprise5)


Reproducible: Didn't try

Steps to Reproduce:
1. Reply as attachment to a test mail.
2. Reply inline to a test mail.
3. Redirect the test mail.
4. Enter a mail address into the redirect dialog.

Actual Results:  
Crash.

Expected Results:  
The test mails should be redirected.
Comment 1 Leo Franchi 2010-07-20 15:41:19 UTC
SVN commit 1152187 by lfranchi:

Don't crash when redirecting

BUG: 244602


 U             kmfilteraction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1152187