Don't crash when redirecting

BUG: 244602

svn path=/branches/KDE/4.5/kdepim/; revision=1152187